--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ passlib>=1.7.4
 tzdata>=2024.2
 motor==3.3.1
 pytest>=8.0.0
+pytest-asyncio>=0.23.0
 black>=24.1.1
 isort>=5.13.2
 flake8>=7.0.0
@@ -23,3 +24,8 @@ numpy>=1.26.0
 python-multipart>=0.0.9
 jq>=1.6.0
 typer>=0.9.0
+# AI Agent Dependencies
+langchain-core>=0.3.0
+langchain-openai>=0.2.0
+langchain-mcp-adapters>=0.1.0
+openai>=1.50.0
